--- a/index.html
+++ b/index.html
@@ -14,94 +14,75 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 
-<link rel="stylesheet" href="styles.css" />
+<link rel="stylesheet" href="styles.css">
 </head>
-
 
 <body>
 
+<!-- Фреймы (как у тебя было) -->
+<iframe id="fireFrame" src="fire.html" style="display:block;"></iframe>
+<iframe id="noiseFrame" src="noise.html" style="display:none;"></iframe>
 
-<!-- ПОКАЗЫВАЕМ ОГОНЬ/ШУМ НА ФОНЕ -->
-<iframe id="fireFrame" src="./fire.html" class="bg-flame"></iframe>
-<iframe id="noiseFrame" src="./noise.html" class="bg-flame" style="display:none"></iframe>
+<div id="container">
 
-
-<div id="left">
-  <div class="left-inner">
-
-    <!-- Плашка-интро -->
-    <div id="introBox" class="card">
-      <h1 class="title">Название проекта</h1>
-      <p class="desc">
-        Короткое описание проекта в пару строк. Здесь можно объяснить идею и инструкцию.
-      </p>
+  <div id="left">
+    <div class="intro">
+      <h1 id="projectTitle"></h1>
+      <p class="desc" id="introDesc"></p>
+      <p class="desc" id="playDesc"></p>
     </div>
 
-   
     <!-- Старт -->
     <button id="startBtn" type="button">Старт</button>
 
-      <!-- НОВОЕ МЕСТО для карточки контактов -->
-  <div id="contactsCard" class="card card--contacts">
-    <div class="desc" id="contactsCardText"></div>
-  </div>
+    <!-- карточка контактов -->
+    <div id="contactsCard" class="card card--contacts">
+      <div class="desc" id="contactsCardText"></div>
+    </div>
 
-    <!-- Форма появляется после старта; интро-блок остаётся сверху -->
+    <!-- Форма -->
     <div id="formSection">
-      <input id="birthInput"  maxlength="10">
-      <input id="deathInput"  maxlength="10">
+      <input id="birthInput" maxlength="10">
       <button id="addBtn" type="button">Добавить</button>
+    </div>
 
-    </div> 
+    <!-- Полоса ошибки (скрыта) -->
+    <div id="errorBar" role="alert" aria-live="polite" hidden></div>
+    <!-- Полоса успеха -->
+    <div id="okBar" role="status" aria-live="polite" hidden></div>
 
-<!-- Полоса ошибки (скрыта) -->
-<div id="errorBar" role="alert" aria-live="polite" hidden></div>
-<!-- Полоса успеха -->
-<div id="okBar" role="status" aria-live="polite" hidden></div>
+    <div id="status"></div>
+    <div id="debugInfo"></div>
 
-
-
-<div id="status"></div>
-<div id="debugInfo"></div>
-    
-    
-    <!-- КНОПКА ТЕСТОВОЙ ЗАПИСИ (видимость управляем из config.js → ENABLE_SEED) -->
+    <!-- КНОПКА ТЕСТОВОЙ ЗАПИСИ -->
     <button id="seedBtn" type="button">Добавить тестовую запись</button>
-
   </div>
+
 </div>
 
 <div id="dbLeft"  class="debug-side"></div>
 <div id="dbRight" class="debug-side"></div>
 
-<!-- Правая панель: бесконечный поток дат (в одну ленту) -->
+<!-- Правая панель: бесконечный поток дат -->
 <div id="right">
   <div id="stream"></div>
 </div>
 
-
-
-
 <!-- Порядок важен: конфиг → синт → визуал → плеер → база → мейн -->
 <script src="config.js"></script>
-  <script src="synth.params.js"></script>
+<script src="synth.params.js"></script>
 <script src="synth.js"></script>
 <script src="visual.js"></script>
-<script src="overlay.fx.js"></script>
 <script src="player.js"></script>
 <script src="data.js"></script>
 <script src="main.js"></script>
 
 <script>
 document.getElementById('startBtn').addEventListener('click', () => {
-  // спрятать огонь
   document.getElementById('fireFrame').style.display = "none";
-  // показать шум
   document.getElementById('noiseFrame').style.display = "block";
 });
 </script>
-
-
 
 </body>
 </html>
