--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <!-- Форма появляется после старта; интро-блок остаётся сверху -->
     <div id="formSection">
       <input id="birthInput"  maxlength="10">
+      <input id="deathInput"  maxlength="10">
       <button id="addBtn" type="button">Добавить</button>
 
     </div> 
