--- a/noise.html
+++ b/noise.html
@@ -4,57 +4,73 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Unicode Noise</title>
 <style>
-  html,body{margin:0;height:100%;background:#0025FF;overflow:hidden}
-  canvas{display:block;width:100%;height:100%}
+  html,body{margin:0;height:100%;background:#000;overflow:hidden}
+  canvas{display:block;width:100vw;height:100vh}
 </style>
 <canvas id="c"></canvas>
 <script>
-(()=> {
-  const c = document.getElementById('c');
-  const ctx = c.getContext('2d');
-  let W,H, DPR=1;
+/* ===== ПАРАМЕТРЫ ===== */
+const SYMBOLS = ["·","˙","▏","▚","░","▜"]; // символы шума
+const CELL = 10;
+const FG = "#fff";
+const NOISE = 0.9;           // сила шума (0..1)
+const NOISE_SPEED = 0.2;     // скорость изменения
+const JITTER = 0.3;          // дрожание символов
+/* ===================== */
 
-  function resize(){
-    DPR = Math.max(1, Math.min(2, window.devicePixelRatio||1));
-    W = Math.floor(innerWidth*DPR);
-    H = Math.floor(innerHeight*DPR);
-    c.width=W; c.height=H;
-  }
-  addEventListener('resize', resize); resize();
+const cv = document.getElementById('c');
+const ctx = cv.getContext('2d');
+let W,H,cols,rows,px;
 
-  const glyphs = ["·","•","∙","●","◍","◉"];
-  function rnd(n){ return Math.random()*n; }
+function resize(){
+  const dpr = Math.max(1, devicePixelRatio||1);
+  W = Math.floor(innerWidth*dpr);
+  H = Math.floor(innerHeight*dpr);
+  cv.width=W; cv.height=H;
+  cv.style.width=innerWidth+'px';
+  cv.style.height=innerHeight+'px';
+  px = CELL*dpr;
+  cols=Math.ceil(W/px);
+  rows=Math.ceil(H/px);
+  ctx.font = `${Math.floor(px)}px monospace`;
+  ctx.textAlign="center";
+  ctx.textBaseline="middle";
+}
+addEventListener('resize', resize, {passive:true}); resize();
 
-  let t=0;
-  function frame(){
-    t += 0.016;
+// простой детерминированный хэш
+function hash(i,j,k=0){
+  let n=(i*73856093)^(j*19349663)^(k*83492791);
+  n=(n<<13)^n;
+  return ((n*(n*n*15731+789221)+1376312589)>>>0)/4294967295;
+}
 
-    ctx.fillStyle="#0025FF";
-    ctx.fillRect(0,0,W,H);
+function draw(tms){
+  const t = tms/1000;
+  ctx.fillStyle="#000";
+  ctx.fillRect(0,0,W,H);
+  ctx.fillStyle=FG;
+  const kt=Math.floor(t*NOISE_SPEED*60);
 
-    const cols = 150;
-    const cw = W/cols;
-    const rows = Math.floor(H/cw);
+  for(let j=0;j<rows;j++){
+    const y0=(j+0.5)*px, yn=y0/H;
+    for(let i=0;i<cols;i++){
+      const x0=(i+0.5)*px, xn=x0/W;
 
-    ctx.textAlign="center";
-    ctx.textBaseline="middle";
-    ctx.font = `${Math.max(10, cw*0.95)}px ui-monospace, SFMono-Regular, Menlo, Consolas, monospace`;
-    ctx.fillStyle="#fff";
+      const v = hash(i,j,kt);
+      const idx = Math.floor(v*SYMBOLS.length);
+      const a = 0.4 + 0.6*v;
 
-    for(let x=0;x<cols;x++){
-      for(let y=0;y<rows;y++){
-        const n = Math.random();
-        if(n < 0.88) continue;
-        const idx = Math.floor(n * glyphs.length) % glyphs.length;
-        ctx.globalAlpha = 0.3 + 0.7*Math.random();
-        ctx.fillText(glyphs[idx], x*cw + cw*0.5, y*cw + cw*0.5);
-      }
+      const jx=(hash(j,i,kt+7)-0.5)*JITTER*px;
+      const jy=(hash(i,j,kt+13)-0.5)*JITTER*px;
+
+      ctx.globalAlpha=a;
+      ctx.fillText(SYMBOLS[idx], x0+jx, y0+jy);
     }
-    ctx.globalAlpha = 1;
-
-    requestAnimationFrame(frame);
   }
-  frame();
-})();
+  ctx.globalAlpha=1;
+  requestAnimationFrame(draw);
+}
+requestAnimationFrame(draw);
 </script>
 </html>
